update slotspec and codec for full range support